--- a/css/geral/style.css
+++ b/css/geral/style.css
@@ -95,13 +95,13 @@
 }
 
 .sobre-img {
-    flex: 1 1 160px;
+  flex: 1 1 160px;
 }
 
-/* Produtos */ 
+/* Produtos */
 .produtos {
-    max-width: 960px;
-    margin: 60px auto;
+  max-width: 960px;
+  margin: 60px auto;
 }
 
 .produtos h1 {
@@ -110,7 +110,252 @@
 }
 
 .produtos-container {
-    display: flex;
-    margin: 0 auto;
-    align-items: end;
+  display: flex;
+  margin: 0 auto;
+  align-items: end;
+  flex-wrap: wrap;
+}
+
+.produto {
+  flex: 1 1 175px;
+  margin: 10px;
+}
+
+.produto h2 {
+  font-size: 4.8rem;
+  color: #a4a4a4;
+  background: #f7f7f7;
+  padding: 60px 20px;
+}
+
+.purple {
+  border-top: 8px solid #ae81ff;
+}
+
+.red {
+  border-top: 8px solid #f9265e;
+}
+
+.blue {
+  border-top: 8px solid #66d9eb;
+}
+
+/* Preço */
+.preco {
+  background: #f7f7f7;
+  padding: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  align-items: flex-end;
+}
+
+.preco-item {
+  flex: 1 1 260px;
+  border: 4px solid white;
+  padding: 20px;
+  margin: 10px;
+}
+
+.preco-item h2 {
+  font-size: 4.8rem;
+  color: #a4a4a4;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.preco-item span {
+  max-width: 300px;
+  margin: 20px auto;
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  padding: 10px 0px 5px 0px;
+  border-top: 4px solid white;
+  border-bottom: 4px solid white;
+  font-size: 4.8rem;
+}
+
+.preco-item sup {
+  font-size: 2.4rem;
+}
+
+.preco-item ul {
+  max-width: 300px;
+  margin: 20px auto;
+  font-size: 2rem;
+  line-height: 1;
+  font-style: italic;
+  color: #7c7c7c;
+}
+
+.preco-item li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.preco-item li::after {
+  content: "";
+  display: block;
+  width: 6px;
+  height: 6px;
+  background: #2c70ff;
+  border-radius: 50%;
+}
+
+.preco-item button {
+  max-width: 300px;
+  display: block;
+  margin: 20px auto;
+  border: 4px solid;
+  color: #222222;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 3.6rem;
+  padding: 15px 0;
+  text-align: center;
+}
+
+/* Qualidade */
+.qualidade {
+  display: flex;
+  max-width: 960px;
+  flex-wrap: wrap;
+  margin: 60px auto;
+}
+
+.qualidade-item {
+  flex: 1 1 300px;
+  margin: 20px 10px;
+}
+
+.qualidade-item h2 {
+  font-size: 3.6rem;
+  font-weight: bold;
+  color: #a4a4a4;
+  margin-bottom: 20px;
+}
+
+.qualidade-item h2::before {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 30px;
+  margin-right: 10px;
+}
+
+.qualidade-item:nth-of-type(3n + 1) h2::before {
+  background: #ae81ff;
+}
+
+.qualidade-item:nth-of-type(3n + 2) h2::before {
+  background: #f9265e;
+}
+
+.qualidade-item:nth-of-type(3n + 3) h2::before {
+  background: #66d9eb;
+}
+.qualidade-item p {
+  font-size: 2rem;
+  line-height: 1.4;
+  color: #777777;
+}
+
+/* Newsletter */
+.newsletter {
+  background-color: #f7f7f7;
+  padding: 60px calc((100% - 960px) / 2);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-info {
+  flex: 1 1 200px;
+  margin: 0 10px;
+}
+
+.newsletter-info h1 {
+  font-size: 4.8rem;
+  font-weight: bold;
+  color: #a4a4a4;
+}
+
+.newsletter-info p {
+  font-style: italic;
+  font-size: 2rem;
+  color: #7c7c7c;
+  max-width: 230px;
+  margin-bottom: 10px;
+}
+
+.newsletter-form {
+  flex: 2 1 260px;
+  margin: 0 10px;
+  align-self: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-form input {
+  flex: 3 1 260px;
+  font-size: 2rem;
+  color: #7c7c7c;
+  font-style: italic;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  border: 4px solid #2c70ff;
+  background: transparent;
+  padding: 15px 10px;
+  margin: 0px;
+  border-radius: 0px;
+}
+
+.newsletter-form button {
+  flex: 1 1 200px;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  font-size: 3.6rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  background: #2c70ff;
+  color: #ffffff;
+  margin: 0;
+  cursor: pointer;
+  border: 0px;
+  padding: 15px 10px;
+}
+
+/* Footer */
+
+.footer {
+  background: #2c70ff;
+  height: 200px;
+  display: flex;
+  align-items: center;
+}
+
+.footer p {
+  flex: 1;
+  font-size: 3.6rem;
+  text-align: center;
+  color: #122ab2;
+}
+
+@media (max-width: 800px) {
+  .preco {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .preco .preco-item:nth-child(3) {
+    order: -2;
+  }
+  .preco .preco-item:nth-child(2) {
+    order: -1;
+  }
+}
+
+@media (max-width: 600px) {
+  .newsletter-form button {
+    font-size: 2.4rem;
+  }
 }
